# cs2-arbitrage-bot

./: .gitignore  README.md  config.yaml  env.example  pyproject.toml  requirements.txt
src/cs2arb/: __init__.py  __main__.py  config.py  logging_config.py  run_bot.py
src/cs2arb/cli/: __init__.py  main.py
src/cs2arb/clients/: __init__.py  buff_client.py  csfloat_client.py
src/cs2arb/core/: __init__.py  arbitrage_engine.py  watchlist.py
src/cs2arb/dashboard/: __init__.py  live_dashboard.py
src/cs2arb/db/: __init__.py  init_db.py  models.py  session.py
src/cs2arb/ingestion/: __init__.py  buff_prices.py  csfloat_listings.py
